# dynamic_task_allocation

dynamic_task_allocation/: readme.md
dynamic_task_allocation/src/: allocation_local.sh  readme.md  spawn_robots_local.sh
dynamic_task_allocation/src/DQN/cfg/: .reward_cfg.cfg.swp  reward_cfg.cfg
dynamic_task_allocation/src/allocation_common/: dta_local_udp.launch  dynamic_allocation.launch  real_pose.launch  simulation_allocation.launch  terminal_host.launch
dynamic_task_allocation/src/allocation_common/include/: Angle.hpp  Circle.hpp  Core.hpp  DPoint.hpp  Line.hpp  PPoint.hpp
dynamic_task_allocation/src/allocation_gazebo/: CMakeLists.txt
dynamic_task_allocation/src/allocation_gazebo/config/: .allocation_gazebo.cfg.swf  .allocation_gazebo.cfg.swi  .allocation_gazebo.cfg.swj  .allocation_gazebo.cfg.swk  .allocation_gazebo.cfg.swl  .allocation_gazebo.cfg.swm  .allocation_gazebo.cfg.swn  .allocation_gazebo.cfg.swo  .allocation_gazebo.cfg.swp  .swp
dynamic_task_allocation/src/allocation_gazebo/include/: gazebo_info.h  poses_talker.h  topic_info_talker.h  world_gazebo.h
dynamic_task_allocation/src/allocation_gazebo/src/: poses_talker.cpp  task_gazebo.cpp  topic_info_talker.cpp  world_gazebo.cpp
dynamic_task_allocation/src/control_terminal/: CMakeLists.txt  package.xml
dynamic_task_allocation/src/control_terminal/include/: maindialog.h
dynamic_task_allocation/src/control_terminal/src/: Nodes.txt  main.cpp  maindialog.cpp  maindialog.ui  topic_info.cpp
dynamic_task_allocation/src/dta_terminal_udp/: CMakeLists.txt  package.xml
dynamic_task_allocation/src/dta_terminal_udp/src/: dta_local_client.cpp  dta_local_client.hpp  dta_local_server.cpp  dta_local_server.hpp  dta_local_server_all.cpp  dta_terminal_client.cpp  dta_terminal_client.hpp  dta_terminal_server.cpp  dta_terminal_server.hpp
dynamic_task_allocation/src/gazebo_description/meshes/: nubot_frame_collision.dae  task.dae
dynamic_task_allocation/src/gazebo_description/meshes/nubot_frame/: generate_dea.sh  nubot_frame1.dae  nubot_frame10.dae  nubot_frame10_blue.dae  nubot_frame10_green.dae  nubot_frame10_red.dae  nubot_frame10_white.dae  nubot_frame1_blue.dae  nubot_frame1_green.dae  nubot_frame1_red.dae  nubot_frame1_white.dae  nubot_frame2.dae  nubot_frame2_blue.dae  nubot_frame2_green.dae  nubot_frame2_red.dae  nubot_frame2_white.dae  nubot_frame3.dae  nubot_frame3_blue.dae  nubot_frame3_green.dae  nubot_frame3_red.dae  nubot_frame3_white.dae  nubot_frame4.dae  nubot_frame4_blue.dae  nubot_frame4_green.dae  nubot_frame4_red.dae  nubot_frame4_white.dae  nubot_frame5.dae  nubot_frame5_blue.dae  nubot_frame5_green.dae  nubot_frame5_red.dae  nubot_frame5_white.dae  nubot_frame6.dae  nubot_frame6_blue.dae  nubot_frame6_green.dae  nubot_frame6_red.dae  nubot_frame6_white.dae  nubot_frame7.dae  nubot_frame7_blue.dae  nubot_frame7_green.dae  nubot_frame7_red.dae  (+11 more)
dynamic_task_allocation/src/gazebo_description/models/: generate_models.sh
dynamic_task_allocation/src/gazebo_description/models/Robot10/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot11/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot12/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot13/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot14/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot15/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot16/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot17/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot18/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot19/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot20/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot21/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot22/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot23/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot24/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot25/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot26/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot27/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot28/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot29/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot30/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot31/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot32/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot33/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot34/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/models/Robot35/: model.config  model.sdf
dynamic_task_allocation/src/gazebo_description/worlds/: Allocation_Map.world
dynamic_task_allocation/src/locattionudp/: CMakeLists.txt
dynamic_task_allocation/src/locattionudp/src/: aco_talker.cpp  locationudpclient.cpp  locationudpclient.hpp  locationudpserver.cpp  locationudpserver.hpp
dynamic_task_allocation/src/msgs/multi_vehicle_msgs/: CMakeLists.txt  package.xml
dynamic_task_allocation/src/msgs/multi_vehicle_msgs/msg/: Lo_Location.msg
dynamic_task_allocation/src/msgs/sensor_driver_msgs/: CMakeLists.txt
dynamic_task_allocation/src/task_allocation/: CMakeLists.txt  package.xml
dynamic_task_allocation/src/task_allocation/include/: task_allocation_plan.h
dynamic_task_allocation/src/task_allocation/src/: task_allocation_plan.cpp
(+33 files in other folders)
