<?xml version="1.0"?>
<package format="2">
  <name>dta_terminal_udp</name>
  <version>0.0.0</version>
  <description>The dta_terminal_udp package</description>


  <maintainer email="lizhiwei@todo.todo">lizhiwei</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>allocation_common</build_depend>
  <exec_depend>allocation_common</exec_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>



</package>
